--- a/index.html
+++ b/index.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html lang="en-us">
+    <!-- contains encoding, link to CSS, Brief description of page in title -->
     <head>
         <meta charset="UTF-8" />
         <link rel="stylesheet" href="./assets/css/style.css">
         <title>Horiseon Information Page</title>
     </head>
+    <!-- Main body -->
     <body>
+        <!-- Top of the page -->
         <header>
+            <!-- Main company title and changes sub section of the company's color -->
             <h1>Hori<span class="seo">seo</span>n</h1>
+            <!-- Contains navigation menus -->
             <nav>
+                <!-- Unordered list to contain menu buttons -->
                 <ul>
                     <li>
                         <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -22,9 +28,13 @@
                 </ul>
             </nav>
         </header>
+        <!-- Contains solely hero banner -->
         <section class="hero"></section>
+        <!-- Contains company's mission statements (3) -->
         <section class="content">
+            <!-- Article containing 1st statement, same for next 2 articles -->
             <article id="search-engine-optimization" class="content-panel">
+                <!-- Images contains alternate text for seos -->
                 <img src="./assets/images/search-engine-optimization.jpg" alt="A laptop, jar of pens, cup of coffee, and journal featuring the six pillars of Search Engine Optimization are on a table." class="float-left" />
                 <h2>Search Engine Optimization</h2>
                 <p>
@@ -46,29 +56,34 @@
                 </p>
             </article>
         </section>
+        <!-- contains benefits side panel -->
         <section class="benefits">
-            <div class="benefit-panel">
+            <!-- possibly should be div since cant be stand alone, but highlights one of 3 benefit, same for next 2 articles -->
+            <article class="benefit-panel">
                 <h3 class="center-align">Lead Generation</h3>
+                <!-- Images have empty alts due to images being of little importance -->
                 <img src="./assets/images/lead-generation.png" alt="" />
                 <p>
                     Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
                 </p>
-            </div>
-            <div class="benefit-panel">
+            </article>
+            <article class="benefit-panel">
                 <h3 class="center-align">Brand Awareness</h3>
                 <img src="./assets/images/brand-awareness.png" alt=""/>
                 <p>
                     Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
                 </p>
-            </div>
-            <div class="benefit-panel">
+            </article>
+            <article class="benefit-panel">
+                <!-- Last of header title tags in decending order of importance through semantic sections -->
                 <h3 class="center-align">Cost Management</h3>
                 <img src="./assets/images/cost-management.png" alt=""/>
                 <p>
                     As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
                 </p>
-            </div>
+            </article>
         </section>
+        <!-- Footer is bottom of page element and contains the copyright information -->
         <footer>
             <h2>Made with ❤️️ by Horiseon</h2>
             <p>
