--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <!-- Contains solely hero banner -->
         <section class="hero"></section>
         <!-- Contains company's mission statements (3) -->
-        <section class="content">
+        <main class="content">
             <!-- Article containing 1st statement, same for next 2 articles -->
             <article id="search-engine-optimization" class="content-panel">
                 <!-- Images contains alternate text for seos -->
@@ -55,34 +55,34 @@
                     Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
                 </p>
             </article>
-        </section>
+        </main>
         <!-- contains benefits side panel -->
-        <section class="benefits">
+        <aside class="benefits">
             <!-- possibly should be div since cant be stand alone, but highlights one of 3 benefit, same for next 2 articles -->
-            <article class="benefit-panel">
+            <section class="benefit-panel">
                 <h3 class="center-align">Lead Generation</h3>
                 <!-- Images have empty alts due to images being of little importance -->
-                <img src="./assets/images/lead-generation.png" alt="" />
+                <img src="./assets/images/lead-generation.png" alt="Lead generation icon" />
                 <p>
                     Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
                 </p>
-            </article>
-            <article class="benefit-panel">
+            </section>
+            <section class="benefit-panel">
                 <h3 class="center-align">Brand Awareness</h3>
-                <img src="./assets/images/brand-awareness.png" alt=""/>
+                <img src="./assets/images/brand-awareness.png" alt="Brand awareness icon"/>
                 <p>
                     Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
                 </p>
-            </article>
-            <article class="benefit-panel">
+            </section>
+            <section class="benefit-panel">
                 <!-- Last of header title tags in decending order of importance through semantic sections -->
                 <h3 class="center-align">Cost Management</h3>
-                <img src="./assets/images/cost-management.png" alt=""/>
+                <img src="./assets/images/cost-management.png" alt="Cost management icon"/>
                 <p>
                     As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
                 </p>
-            </article>
-        </section>
+            </section>
+        </aside>
         <!-- Footer is bottom of page element and contains the copyright information -->
         <footer>
             <h2>Made with ❤️️ by Horiseon</h2>
